<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.courshop_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.courshop_app.ui.category.CategoryFragment"
        android:label="@string/Categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.courshop_app.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_myCourses"
        android:name="com.example.courshop_app.ui.myCourses.MyCoursesFragment"
        android:label="@string/my_courses"
        tools:layout="@layout/fragment_my_courses" />
    <fragment
        android:id="@+id/nav_myOrders"
        android:name="com.example.courshop_app.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_newCourses"
        android:name="com.example.courshop_app.NewCoursesFragment"
        android:label="@string/new_courses"
        tools:layout="@layout/fragment_new_courses" />
</navigation>