<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_email24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/email_reg_hint"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password_reg_hint"
        android:inputType="textPassword"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/courseshop_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_person_circle"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/name_reg_hint"
        android:inputType="textPersonName"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="158dp"
        android:background="@color/CG_Blue"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColorHighlight="@color/Cadet_blue"
        android:textColorLink="@color/Beau_Blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"

        />

    <TextView
        android:id="@+id/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/already_have_an_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <TextView
        android:id="@+id/Sign_in_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sing_in"
        android:textColor="@color/CG_Blue"
        app:layout_constraintBottom_toBottomOf="@+id/already_have_an_account"
        app:layout_constraintStart_toEndOf="@+id/already_have_an_account"
        app:layout_constraintTop_toTopOf="@+id/already_have_an_account"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar_reg"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>