<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Log_in_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <EditText
        android:id="@+id/email_log_in"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_email24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_img" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_log_in" />

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/courseshop_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Log_in_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="158dp"
        android:background="@color/CG_Blue"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        tools:text="Log In" />

    <TextView
        android:id="@+id/dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_yet"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Log_in_btn" />

    <TextView
        android:id="@+id/Sign_up_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sing_up"
        android:textColor="@color/CG_Blue"
        app:layout_constraintBottom_toBottomOf="@+id/dont_have_an_account"
        app:layout_constraintStart_toEndOf="@+id/dont_have_an_account"
        app:layout_constraintTop_toTopOf="@+id/dont_have_an_account"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar_log"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/dont_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Log_in_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>