<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@color/Beau_Blue"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="5dp"
            android:elevation="3dp"
            android:hint="@string/search_your_favourite_course_here"
            android:inputType="number|datetime|text"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bubbler_one"
                android:text="@string/popular_courses"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bubbler_one"
                android:text="@string/see_all"
                android:textSize="18sp"
                android:textColor="@color/CG_Blue"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginRight="10dp"
                />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/popular_courses"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/pupular_categories"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bubbler_one"
                android:text="@string/popular_categories"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bubbler_one"
                android:text="@string/see_all"
                android:textSize="18sp"
                android:textColor="@color/CG_Blue"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginRight="10dp"
                />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/special4U"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bubbler_one"
                android:text="Recommended for You"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bubbler_one"
                android:text="@string/see_all"
                android:textSize="18sp"
                android:textColor="@color/CG_Blue"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_marginRight="10dp"
                />


        </LinearLayout>


    </LinearLayout>

</ScrollView>